di er dai xiao long 8 can shu dui bi shi chang diao yan ji gou Counterpoint Research fa bu de bao gao xian shi

--- a/free-nodes/2024-12-13-clash-node-daily-updates.htm
+++ b/free-nodes/2024-12-13-clash-node-daily-updates.htm
@@ -111,6 +111,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 <p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p><p>&nbsp;</p><p></p><h2>订阅链接</h2><p>&nbsp;</p><p><strong>clash订阅链接</strong></p><p>https://clashnode.github.io/uploads/2024/12/0-20241213.yaml</p><p>https://clashnode.github.io/uploads/2024/12/1-20241213.yaml</p><p>https://clashnode.github.io/uploads/2024/12/2-20241213.yaml</p><p>https://clashnode.github.io/uploads/2024/12/3-20241213.yaml</p><p>https://clashnode.github.io/uploads/2024/12/4-20241213.yaml</p><p>&nbsp;</p><p><strong>v2ray订阅链接:</strong></p><p>https://clashnode.github.io/uploads/2024/12/0-20241213.txt</p><p>https://clashnode.github.io/uploads/2024/12/1-20241213.txt</p><p>https://clashnode.github.io/uploads/2024/12/2-20241213.txt</p><p>https://clashnode.github.io/uploads/2024/12/3-20241213.txt</p><p>https://clashnode.github.io/uploads/2024/12/4-20241213.txt</p><p><strong>sing-box订阅链接</strong></p><p>https://clashnode.github.io/uploads/2024/12/20241213.json</p><p>&nbsp;</p><p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://t2.9999911.xyz/#/register?code=" data-type="Xingchen" data-code="6KO4Fpse" rel="nofollow noopener" style="color:#c00;">星辰机场</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>                <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
                                         <p>上一个：<a href="/free-nodes/2024-12-12-free-ssr-node.htm">12月12日更新22.1M/S，2024年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点订阅</a></p>
+                                        <p>下一个：<a href="/free-nodes/2024-12-14-shadowrocket-node.htm">12月14日更新18.5M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点订阅</a></p>
                                     </div>
                                 <div class="panel panel-default mt-5">
                     <div class="panel-heading">
@@ -138,8 +139,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-5-10-free-high-speed-nodes.htm">5月10日更新21.1M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、香港、韩国、新加坡、日本、欧洲、美国等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-5-16-free-shadowrocket-node.htm">5月16日更新21.5M/S，2024年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、韩国、新加坡、美国、加拿大、日本、香港等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -148,8 +149,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-8-12-clash-windows.htm">8月12日更新21.4M/S，2024年最新高速V2ray/Shadowrocket/Clash/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、日本、美国、加拿大、新加坡、香港、韩国等地区,最高速度可达21.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-3-31-free-clash-subscribe.htm">3月31日更新19.1M/S，2024年最新高速SSR/Clash/Shadowrocket/V2ray订阅链接免费节点</a></h4>
+                <p>这一次的节点更新覆盖了美国、韩国、欧洲、日本、香港、加拿大、新加坡等地区,最高速度可达19.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -158,8 +159,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-5-7-clash-node-daily-updates.htm">5月7日更新21.4M/S，2024年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、日本、美国、韩国、香港、欧洲、新加坡等地区,最高速度可达21.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-9-2-free-subscribe-node.htm">9月2日更新20.1M/S，2024年最新高速SSR/Shadowrocket/V2ray/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了美国、欧洲、韩国、香港、新加坡、日本、加拿大等地区,最高速度可达20.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -168,8 +169,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-4-clash-node-daily-updates.htm">10月4日更新19.8M/S，2024年最新高速SSR/V2ray/Clash/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了美国、日本、加拿大、韩国、新加坡、欧洲、香港等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-21784.htm">我们如何借助组函数COUNT（*）和GROUP BY子句知道列中值的重复？</a></h4>
+                <p>我们可以使用COUNT（*）和GROUP BY子句来找出列中值的重复。以下是示例，使用表“ Student”的“名称”列上的COUNT（*）和GROUP BY子句进行演示- mysql&gt;&nbs</p>
             </div>
         </div>
     </div>
@@ -178,8 +179,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-9-29-node-share.htm">9月29日更新22.1M/S，2024年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、美国、欧洲、香港、加拿大、日本、韩国等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-9-19-free-high-speed-nodes.htm">9月19日更新22M/S，2024年最新高速Shadowrocket/SSR/V2ray/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了韩国、美国、加拿大、欧洲、日本、新加坡、香港等地区,最高速度可达22 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -188,8 +189,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-4-30-shadowrocket-node.htm">4月30日更新18.6M/S，2024年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了韩国、新加坡、加拿大、欧洲、美国、日本、香港等地区,最高速度可达18.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-12-5-free-node-subscribe-links.htm">12月5日更新20.5M/S，2024年最新高速SSR/Clash/Shadowrocket/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了新加坡、日本、加拿大、香港、美国、韩国、欧洲等地区,最高速度可达20.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -198,8 +199,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-5-17-clash-node.htm">5月17日更新21.2M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、加拿大、香港、新加坡、欧洲、美国、韩国等地区,最高速度可达21.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-20869.htm">win11系统怎么禁用Superfetch服务</a></h4>
+                <p>&nbsp; &nbsp;Superfetch也被叫做SysMain，这个服务会记录用户打开应用程序的模式，并且预先将它们加载到内存中节省时间，不过最近有位win11系统用户在使用电脑的过程当中，发现</p>
             </div>
         </div>
     </div>
@@ -208,8 +209,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-9-27-free-v2ray-subscribe.htm">9月27日更新22.9M/S，2024年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了香港、韩国、加拿大、欧洲、新加坡、美国、日本等地区,最高速度可达22.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-5-14-free-v2ray.htm">5月14日更新18.7M/S，2024年最新高速Shadowrocket/Clash/V2ray/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、新加坡、日本、韩国、美国、欧洲、香港等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -218,8 +219,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-22702.htm">动物防疫法2021不牵绳（动物防疫法禁养犬有哪些）</a></h4>
-                <p>摘要：       今天给各位分享动物防疫法2021不牵绳的知识，其中也会对动物防疫法禁养犬有哪些进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、5月1日起遛.</p>
+                <h4><a href="/free-nodes/2024-9-24-free-shadowrocket-node.htm">9月24日更新20.4M/S，2024年最新高速V2ray/Shadowrocket/Clash/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了美国、欧洲、日本、加拿大、香港、韩国、新加坡等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -228,8 +229,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-4-14-free-node-subscribe-links.htm">4月14日更新19.5M/S，2024年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点</a></h4>
-                <p>这一次的节点更新覆盖了美国、韩国、新加坡、日本、加拿大、香港、欧洲等地区,最高速度可达19.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-4-16-clash-node.htm">4月16日更新20.9M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点</a></h4>
+                <p>这一次的节点更新覆盖了新加坡、香港、欧洲、美国、韩国、加拿大、日本等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -240,7 +241,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">39</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
+                                <h4><span class="badge" style="float: right;">42</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
                                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
                                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
                                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2024-09/" title="2024-09 归档">2024-09</a></h4>
